@@ -1041,6 +1041,8 @@ class Annotation(Text):
     def _get_xy(self, x, y, s):
         if s=='data':
             trans = self.axes.transData
+            x = float(self.convert_xunits(x))
+            y = float(self.convert_yunits(y))
             return trans.transform_point((x, y))
         elif s=='polar':
             theta, r = x, y
